# reading-vue

./: .env.dist  .gitignore  README.md  docker-compose.override.yaml  docker-compose.stage.yaml  docker-compose.yaml
.github/workflows/: build.yaml  dev.yaml  sync.yaml
app/: nginx.conf
backend/: .gitignore  Dockerfile  api.py  pyproject.toml  redis.py  requirements.txt
backend/config/: __init__.py  db.py
backend/migrations/models/: 0_20221220064217_init.py
backend/models/: __init__.py  users.py
backend/utils/: __init__.py  analize.py  models.py
frontend/: Dockerfile  Dockerfile.stage  index.html  nginx.conf  package-lock.json  package.json  stage.Dockerfile  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts  vue.config.js  vue.config.ts
frontend/public/: index.html  robots.txt
frontend/public/css/: g-fonts.css
frontend/src/: App.vue  main.js  main.ts  process-env.d.ts
frontend/src/assets/: base.css  vue-base-input.css
frontend/src/components/: BaseButton.vue  BaseCheckbox.vue  BaseInput.vue  BaseTextBox.vue  ButtonLink.vue  ErrorMessage.vue  HelloWorld.vue  LoginButton.vue  Navigation.vue  TextParser.vue  Timer.vue  WordCard.vue  WordCounter.vue
frontend/src/helpers/: account.service.js  api.js  api.ts  auth-backend.js  auth.guard.js  charSets.js  error-interceptor.js  fetch-text.js  index.js  init-facebook-sdk.js  parser.ts  text-parser.js  types.ts  update-word.js
frontend/src/i18n/: index.js
frontend/src/layout/: index.vue  no-scroll.vue
frontend/src/layouts/: default.vue
frontend/src/router/: index.js  middleware.js
(+17 files in other folders)
